overhauled the data receieving methods from gspro to isolate burst message, as gspro seems to send 6 messages per click in the GUI...
arm and disarm is now based on when you are in a round in GSPro instead of always auto armed.

--- a/MLM2PRO-BT-APP/SettingsPage.xaml
+++ b/MLM2PRO-BT-APP/SettingsPage.xaml
@@ -21,14 +21,26 @@
 
             <!-- OpenConnect Settings -->
             <StackPanel Grid.Column="0" Grid.Row="0" Margin="10">
-                <TextBlock Text="OpenConnect Settings" Foreground="White" FontSize="24" Margin="0,0,0,10"/>
+                <TextBlock Text="GSPro Settings" Foreground="White" FontSize="24" Margin="0,0,0,10"/>
                 <StackPanel Margin="10">
-                    <TextBlock Text="GSPro IP" Foreground="White" FontSize="16"/>
+                    <TextBlock Text="Auto Launch GSPro" Foreground="White" FontSize="16"/>
+                    <CheckBox IsChecked="{Binding Settings.OpenConnect.AutoStartGSPro, Mode=TwoWay}" FontSize="14"/>
+                </StackPanel>
+                <StackPanel Margin="10">
+                    <TextBlock Text="Skip GSPro Launcher" Foreground="White" FontSize="16"/>
+                    <CheckBox IsChecked="{Binding Settings.OpenConnect.SkipGSProLauncher, Mode=TwoWay}" FontSize="14"/>
+                </StackPanel>
+                <StackPanel Margin="10">
+                    <TextBlock Text="GSPro API IP" Foreground="White" FontSize="16"/>
                     <TextBox Text="{Binding Settings.OpenConnect.GSProIp, Mode=TwoWay}" ToolTip="Enter GSPro IP" FontSize="14"/>
                 </StackPanel>
                 <StackPanel Margin="10">
-                    <TextBlock Text="GSPro Port" Foreground="White" FontSize="16"/>
+                    <TextBlock Text="GSPro API Port" Foreground="White" FontSize="16"/>
                     <TextBox Text="{Binding Settings.OpenConnect.GSProPort, Mode=TwoWay}" ToolTip="Enter GSPro Port" FontSize="14"/>
+                </StackPanel>
+                <StackPanel Margin="10">
+                    <TextBlock Text="GSPro Executable" Foreground="White" FontSize="16"/>
+                    <TextBox Text="{Binding Settings.OpenConnect.GSProEXE, Mode=TwoWay}" ToolTip="Enter GSPro exe path" FontSize="14"/>
                 </StackPanel>
             </StackPanel>
 
@@ -65,6 +77,10 @@
             <StackPanel Grid.Column="1" Grid.Row="0" Margin="10">
                 <TextBlock Text="LaunchMonitor Settings" Foreground="White" FontSize="24" Margin="0,15,0,10"/>
                 <StackPanel Margin="10">
+                    <TextBlock Text="Auto Connect LaunchMonitor" Foreground="White" FontSize="16"/>
+                    <CheckBox IsChecked="{Binding Settings.LaunchMonitor.AutoStartLaunchMonitor, Mode=TwoWay}" FontSize="14"/>
+                </StackPanel>
+                <StackPanel Margin="10">
                     <TextBlock Text="Bluetooth Device Name" Foreground="White" FontSize="16"/>
                     <TextBox Text="{Binding Settings.LaunchMonitor.BluetoothDeviceName, Mode=OneWay}" FontSize="14" IsEnabled="False"/>
                 </StackPanel>
@@ -75,10 +91,6 @@
                 <StackPanel Margin="10">
                     <TextBlock Text="Auto Wake" Foreground="White" FontSize="16"/>
                     <CheckBox IsChecked="{Binding Settings.LaunchMonitor.AutoWake, Mode=TwoWay}" FontSize="14"/>
-                </StackPanel>
-                <StackPanel Margin="10">
-                    <TextBlock Text="Debug Logging" Foreground="White" FontSize="16"/>
-                    <CheckBox IsChecked="{Binding Settings.LaunchMonitor.DebugLogging, Mode=TwoWay}" FontSize="14"/>
                 </StackPanel>
             </StackPanel>
 
