--- a/MLM2PRO-BT-APP/App.xaml
+++ b/MLM2PRO-BT-APP/App.xaml
@@ -2,6 +2,5 @@
     x:Class="MLM2PRO_BT_APP.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MLM2PRO_BT_APP"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:MLM2PRO_BT_APP">
 </Application>
