--- a/MLM2PRO-BT-APP/HomeMenu.xaml
+++ b/MLM2PRO-BT-APP/HomeMenu.xaml
@@ -1,8 +1,6 @@
 ﻿<Page x:Class="MLM2PRO_BT_APP.HomeMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"      
-    xmlns:xaml="using:Microsoft.Toolkit.Win32.UI.XamlHost"
-    xmlns:local="using:MLM2PRO_BT_GSPRO"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" Width="1260" Height="710">
@@ -32,9 +30,12 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="GSPro" FontSize="40" Foreground="White" Height="64" HorizontalAlignment="Center"/>
-                <TextBlock Text="{Binding GSProClub, Mode=OneWay}" Background="{Binding LMBattLifeBackground, Mode=OneWay}" FontSize="40" Foreground="White" Grid.Column="1" Height="64" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBox x:Name="textBox" Width="auto" Height="40" TextWrapping="Wrap" 
-                     Text="{Binding GSProStatus, Mode=OneWay}" Background="{Binding GSProStatusBackground, Mode=OneWay}" Margin="0,0,0,10" IsHitTestVisible="False" FontSize="22" Grid.ColumnSpan="2" Grid.Row="1"/>
+                <TextBlock Text="{Binding GSProClub, Mode=OneWay}" Background="{Binding LmBatteryLifeBackground, Mode=OneWay}" FontSize="40" Foreground="White"
+                           Grid.Row="0" Grid.Column="1" Height="64" VerticalAlignment="Center" HorizontalAlignment="Center"
+                           d:DataContext="{d:DesignInstance }" />
+                <TextBox x:Name="GsProStatusBox" Width="auto" Height="40" TextWrapping="Wrap" 
+                     Text="{Binding GSProStatus, Mode=OneWay}" Background="{Binding GSProStatusBackground, Mode=OneWay}" Margin="0,0,0,10" IsHitTestVisible="False" FontSize="22" Grid.ColumnSpan="2"
+                     Grid.Column="0" Grid.Row="1" d:DataContext="{d:DesignInstance }" />
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -46,9 +47,9 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" x:Name="GSPro_Connect" Content="Connect" Height="40" Width="280" Click="GSPro_Connect_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="1" x:Name="GSPro_Disconnect" Content="Disconnect" Height="40" Width="280" Click="GSPro_Disconnect_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="1" Grid.Column="0" x:Name="GSPro_TextShot" Content="Send TestShot" Height="40" Width="280" Click="GSPro_Send_TestShot_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="0" x:Name="GsProConnect" Content="Connect" Height="40" Width="280" Click="GSPro_Connect_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="1" x:Name="GsProDisconnect" Content="Disconnect" Height="40" Width="280" Click="GSPro_Disconnect_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="1" Grid.Column="0" x:Name="GsProTextShot" Content="Send TestShot" Height="40" Width="280" Click="GSPro_Send_TestShot_Click" Margin="5" HorizontalAlignment="Center"/>
             </Grid>
         </StackPanel>
 
@@ -64,9 +65,11 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="Launch Monitor" FontSize="40" Foreground="White" Height="64" HorizontalAlignment="Center"/>
-                <TextBlock Text="{Binding LMBattLife, Mode=OneWay}" Background="{Binding LMBattLifeBackground, Mode=OneWay}" FontSize="40" Foreground="White" Grid.Column="1" Height="64" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBox x:Name="LMStatus" Width="auto" Height="40" TextWrapping="Wrap" 
-         Text="{Binding LMStatus, Mode=OneWay}" Background="{Binding LMStatusBackground, Mode=OneWay}" Margin="0,0,0,10" IsHitTestVisible="False" FontSize="22" Grid.ColumnSpan="2" Grid.Row="1"/>
+                <TextBlock Text="{Binding LmBatteryLife, Mode=OneWay}" Background="{Binding LMBattLifeBackground, Mode=OneWay}" FontSize="40" Foreground="White"
+                           Grid.Row="0" Grid.Column="1" Height="64" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <TextBox x:Name="LmStatus" Width="auto" Height="40" TextWrapping="Wrap" 
+         Text="{Binding LMStatus, Mode=OneWay}" Background="{Binding LMStatusBackground, Mode=OneWay}" Margin="0,0,0,10" IsHitTestVisible="False" FontSize="22" Grid.ColumnSpan="2"
+         Grid.Column="0" Grid.Row="1"/>
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -78,12 +81,12 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" x:Name="LM_Connect_Button" Content="Connect" Height="40" Width="280" Click="LaunchMonitor_Connect_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="1" x:Name="LM_Disconnect_Button" Content="Disconnect" Height="40" Width="280" Click="LaunchMonitor_Disconnect_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="2" Grid.Column="0" x:Name="LM_WebApi_Test" Content="Test WebApi" Height="40" Width="280" Click="LM_WebApiTest_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="1" Grid.Column="0" x:Name="LM_Arm_device" Content="ARM" Height="40" Width="280" Click="LM_ARMButton_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="1" Grid.Column="1" x:Name="LM_Disarm_Button" Content="DISARM" Height="40" Width="280" Click="LM_DISARMButton_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="2" Grid.Column="1" x:Name="LM_ReSub_Button" Content="ReSub" Height="40" Width="280" Click="LM_Resub_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="0" x:Name="LmConnectButton" Content="Connect" Height="40" Width="280" Click="LaunchMonitor_Connect_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="1" x:Name="LmDisconnectButton" Content="Disconnect" Height="40" Width="280" Click="LaunchMonitor_Disconnect_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="2" Grid.Column="0" x:Name="LmWebApiTest" Content="Test WebApi" Height="40" Width="280" Click="LM_WebApiTest_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="1" Grid.Column="0" x:Name="LmArmDevice" Content="ARM" Height="40" Width="280" Click="LM_ARMButton_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="1" Grid.Column="1" x:Name="LmDisarmButton" Content="DISARM" Height="40" Width="280" Click="LM_DISARMButton_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="2" Grid.Column="1" x:Name="LmReSubButton" Content="ReSub" Height="40" Width="280" Click="LM_Resub_Click" Margin="5" HorizontalAlignment="Center"/>
             </Grid>
 
         </StackPanel>
@@ -100,9 +103,12 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="Putting" FontSize="40" Foreground="White" Height="64" HorizontalAlignment="Center"/>
-                <TextBlock Text="{Binding PuttingEnabled, Mode=OneWay}" FontSize="40" Foreground="White" Grid.Column="1" Height="64" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <TextBox x:Name="Putting_Status_TextBox" Width="auto" Height="40" TextWrapping="Wrap" 
-                    Text="{Binding PuttingStatus, Mode=OneWay}" Background="{Binding PuttingStatusBackground, Mode=OneWay}" Margin="0,0,0,10" IsHitTestVisible="False" FontSize="22" Grid.ColumnSpan="2" Grid.Row="1"/>
+                <TextBlock Text="{Binding PuttingEnabled, Mode=OneWay}" FontSize="40" Foreground="White" Grid.Row="0"
+                           Grid.Column="1" Height="64" VerticalAlignment="Center" HorizontalAlignment="Center"
+                           d:DataContext="{d:DesignInstance }" />
+                <TextBox x:Name="PuttingStatusTextBox" Width="auto" Height="40" TextWrapping="Wrap" 
+                    Text="{Binding PuttingStatus, Mode=OneWay}" Background="{Binding PuttingStatusBackground, Mode=OneWay}" Margin="0,0,0,10" IsHitTestVisible="False" FontSize="22" Grid.ColumnSpan="2"
+                    Grid.Column="0" Grid.Row="1"/>
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -114,16 +120,17 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" x:Name="Putting_Connect" Content="Connect" Height="40" Width="280" Click="Putting_Connect_Click" Margin="5" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="1" x:Name="Putting_Disconnect" Content="Disconnect" Height="40" Width="280" Click="Putting_Disconnect_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="0" x:Name="PuttingConnect" Content="Connect" Height="40" Width="280" Click="Putting_Connect_Click" Margin="5" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="1" x:Name="PuttingDisconnect" Content="Disconnect" Height="40" Width="280" Click="Putting_Disconnect_Click" Margin="5" HorizontalAlignment="Center"/>
             </Grid>
         </StackPanel>
 
 
         <!-- Shot Data Section -->
-        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" HorizontalAlignment="Center" Height="390">
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Grid.Column="0" HorizontalAlignment="Center" Height="390">
             <TextBlock Text="Shot Data" FontSize="36" HorizontalAlignment="Center" Foreground="White"/>
-            <DataGrid x:Name="ShotDataDataGrid" Margin="10" AutoGenerateColumns="False" IsReadOnly="True" FontSize="16" AlternatingRowBackground="#FFC5C5C5" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" MaxHeight="270" ScrollViewer.VerticalScrollBarVisibility="Visible" MinHeight="270">
+            <DataGrid x:Name="ShotDataDataGrid" Margin="10" AutoGenerateColumns="False" IsReadOnly="True" FontSize="16" AlternatingRowBackground="#FFC5C5C5" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" MaxHeight="270" ScrollViewer.VerticalScrollBarVisibility="Visible" MinHeight="270"
+                      d:DataContext="{d:DesignInstance }">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Shot" Binding="{Binding ShotNumber}" Width="*" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Result" Binding="{Binding Result}" Width="*" IsReadOnly="True"/>
