--- a/MLM2PRO-BT-APP/AboutPage.xaml
+++ b/MLM2PRO-BT-APP/AboutPage.xaml
@@ -5,7 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
-      Title="AboutPage">
+      Title="AboutPage"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      TextElement.Foreground="{DynamicResource MaterialDesign.Brush.Foreground}"
+      Background="{DynamicResource MaterialDesign.Brush.Background}"
+      TextElement.FontWeight="Medium"
+      TextElement.FontSize="14"
+      FontFamily="{materialDesign:MaterialDesignFont}" >
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -17,11 +23,14 @@
         </Grid.RowDefinitions>
 
         <!-- GSPro Section -->
-        <StackPanel Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Margin="20">
-            <TextBlock Text="About" FontSize="48" Margin="0,0,0,20" HorizontalAlignment="Center" Foreground="White"/>
-            <TextBlock Text="early days for this connector, placeholder page" FontSize="20" Margin="0,0,0,20" HorizontalAlignment="Center" Foreground="White"/>
-            <Button x:Name="GitHub_Link" Content="GitHub"  FontSize="18" HorizontalAlignment="Center" Background="White" Width="100" Height="50" Click="GitHub_Link_Click"/>
-        </StackPanel>
+
+        <materialDesign:Card Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel VerticalAlignment="Top" Margin="20">
+                <TextBlock Text="About" FontSize="48" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+                <TextBlock Text="early days for this connector, placeholder page" FontSize="20" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+                <Button x:Name="GitHub_Link" Content="GitHub"  FontSize="18" HorizontalAlignment="Center" Width="100" Height="50" Click="GitHub_Link_Click"/>
+            </StackPanel>
+        </materialDesign:Card>
     </Grid>
     <!-- NavigateUri="https://github.com/Duwaynef/MLM2PRO-BT-GSPRO" -->
 </Page>
