--- a/MLM2PRO-BT-APP/MainWindow.xaml
+++ b/MLM2PRO-BT-APP/MainWindow.xaml
@@ -2,18 +2,27 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:MLM2PRO_BT_APP"
-        Title="MLM2PRO Bluetooth Connector" Height="720" Width="1280" ResizeMode="CanMinimize">
+        Title="MLM2PRO Bluetooth Connector" Height="720" Width="1280" ResizeMode="CanMinimize" 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesign.Brush.Foreground}"
+        Background="{DynamicResource MaterialDesign.Brush.Background}"
+        TextElement.FontWeight="Medium"
+        TextElement.FontSize="12"
+        FontFamily="{materialDesign:MaterialDesignFont}">
+    
     <DockPanel>
-        <Menu DockPanel.Dock="Top" Height="30" FontSize="14">
-            <MenuItem Header="Exit" Click="Exit_Click" Margin="5" FontSize="14"/>
-            <MenuItem Header="Home" Click="Home_Click" Margin="5"/>
-            <MenuItem Header="Settings" Click="Settings_Click" Margin="5"/>
-            <MenuItem Header="About" Click="About_Click" Margin="5"/>
-            <MenuItem Header="Buy me a coffee" Click="Coffee_Click" HorizontalAlignment="Right" Margin="5"/>
-            <MenuItem Header="Debug Console" Click="Button_Toggle_DebugConsole"/>
+        <Menu DockPanel.Dock="Top" Height="48" VerticalAlignment="Top">
+            <MenuItem Header="Exit" Click="Exit_Click" Margin="10,0,5,0"/>
+            <MenuItem Header="Home" Click="Home_Click" Margin="5,0,5,0"/>
+            <MenuItem Header="Settings" Click="Settings_Click" Margin="5,0,5,0"/>
+            <MenuItem Header="Help" Click="About_Click" Margin="5,0,5,0"/>
+            <MenuItem Header="Buy me a coffee" Click="Coffee_Click" HorizontalAlignment="Right" Margin="5,0,5,0"/>
+            <MenuItem Header="Debug Console" Click="Button_Toggle_DebugConsole" Margin="5,0,5,0"/>
+            <MenuItem Header="Toggle Dark Mode" Click="Button_Toggle_ToggleDarkMode" Margin="5,0,5,0"/>
         </Menu>
-        
-        <Frame x:Name="MainContentFrame" NavigationUIVisibility="Hidden" Background="#FF313131"/>
+
+
+        <Frame x:Name="MainContentFrame" NavigationUIVisibility="Hidden"/>
         
     </DockPanel>
 </Window>
