--- a/MLM2PRO-BT-APP/AboutPage.xaml
+++ b/MLM2PRO-BT-APP/AboutPage.xaml
@@ -18,16 +18,17 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="220" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <!-- GSPro Section -->
 
-        <materialDesign:Card Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <materialDesign:Card Margin="20" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel VerticalAlignment="Top" Margin="20">
-                <TextBlock Text="About" FontSize="48" Margin="0,0,0,20" HorizontalAlignment="Center"/>
-                <TextBlock Text="early days for this connector, placeholder page" FontSize="20" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+                <TextBlock Text="Help" FontSize="48" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+                <TextBlock 
+                           FontSize="20" Margin="0,0,0,20" HorizontalAlignment="Center"><Run Text="Common ways to get the first connection working:"/><LineBreak/><Run/><LineBreak/><Run Text=" - close app"/><LineBreak/><Run Text=" - unpair"/><LineBreak/><Run Text=" - toggle off and back on bluetooth"/><LineBreak/><Run Text=" - pair the device and make sure to choose mlm2-serialnumber ( not MLM2_BT_ , however BlueZ is okay )"/><LineBreak/><Run Text=" - windows shows connected. just wait for it to flip to not connected"/><LineBreak/><Run Text=" - Open app and let it attempt to connect"/><LineBreak/><Run/><LineBreak/><Run Text="  Please visit the github page, "/><LineBreak/><Run Text="  I will try to keep the readme updated with the latest fixes / processes"/><LineBreak/><Run Text="  "/><LineBreak/><Run Text="  often i will try to keep detailed notes on the releases pages to let you know of major changes."/></TextBlock>
                 <Button x:Name="GitHub_Link" Content="GitHub"  FontSize="18" HorizontalAlignment="Center" Width="100" Height="50" Click="GitHub_Link_Click"/>
             </StackPanel>
         </materialDesign:Card>
