--- a/MLM2PRO-BT-APP/AboutPage.xaml
+++ b/MLM2PRO-BT-APP/AboutPage.xaml
@@ -3,15 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
-      Title="AboutPage"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      TextElement.Foreground="{DynamicResource MaterialDesign.Brush.Foreground}"
-      Background="{DynamicResource MaterialDesign.Brush.Background}"
-      TextElement.FontWeight="Medium"
-      TextElement.FontSize="14"
-      FontFamily="{materialDesign:MaterialDesignFont}" >
+    Title="AboutPage"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    TextElement.Foreground="{DynamicResource MaterialDesign.Brush.Foreground}"
+    Background="{DynamicResource MaterialDesign.Brush.Background}"
+    TextElement.FontWeight="Medium"
+    TextElement.FontSize="14"
+    FontFamily="{materialDesign:MaterialDesignFont}"
+      mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
